--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "nativewind": "^4.0.1",
     "expo": "~50.0.5",
     "expo-status-bar": "~1.11.1",
+    "lucide-react-native": "^0.341.0",
+    "nativewind": "^4.0.1",
     "react": "18.2.0",
     "react-native": "0.73.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@biomejs/biome": "1.5.3",
     "@types/react": "~18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
