--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/ngrok": "^2.5.0",
     "expo": "~50.0.5",
     "expo-status-bar": "~1.11.1",
     "lucide-react-native": "^0.341.0",
@@ -26,7 +27,8 @@
     "eslint-config-universe": "^12.0.0",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "@expo/ngrok": "^4.1.0"
   },
   "eslintConfig": {
     "extends": "universe/native"
